<resources>
    <string name="app_name">Bill calculator</string>
    <string name="title_main">Currency counter</string>
    <string name="sum_static">Amount</string>
    <string name="recalculate">Recount</string>
    <string name="denomination">Nominal</string>
    <string name="count">Number</string>
    <string name="Save">Save</string>
    <string name="settings">Settings</string>
    <string name="currency">Currency</string>
    <string name="coins">Coins </string>
    <string name="def_value">Default</string>
    <string name="about">About</string>
    <string name="version">2.1.5</string>
    <string name="update_date">Update date: 27.11.2020</string>
    <string name="about_bottom">Business automation</string>
    <string name="txt_hyperlink">Complife.ua➔</string>
    <string name="calculator">Calculator</string>
    <string name="language">Language</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="warning">Warning</string>
    <string name="clearInputsAlert">Do you really want to clear the inputs?</string>
    <string name="changeCurrencyAlert">Switching currency will lead to data loss</string>
    <string name="saveRecordAlert">Do you want to finish filling and save?</string>
    <string name="historyHeader">History</string>
    <string name="rememberRate">Remember rate</string>
</resources>